app/assets/stylesheets/pages/editor.scss
.file-editor {
  .nav-links {
    display: inline-block;
  }
  #editor {
    border: none;
    border-radius: 0;
    height: 500px;
    margin: 0;
    padding: 0;
    position: relative;
    width: 100%;
  }

  .ace_gutter-cell {
    background-color: $gray-light;
  }



  .cancel-btn {
    color: $editor-cancel-color;

    &:hover {
      color: $editor-cancel-color;
    }
  }

  .file-title {
    @extend .monospace;

    line-height: 35px;
    padding-top: 7px;
    padding-bottom: 7px;

    .pull-right {
      height: 20px;
    }
  }

  .editor-ref {
    background: $gray-light;
    padding-right: $gl-padding;
    border-right: 1px solid $border-color;
    display: block;
    float: left;
    margin-right: 10px;
  }

  .editor-file-name {
    @extend .monospace;

    float: left;
    margin-right: 10px;
  }

  .new-file-name {
    display: inline-block;
    max-width: 450px;
    float: left;

    @media(max-width: $screen-md-max) {
      width: 280px;
    }

    @media(max-width: $screen-sm-max) {
      width: 180px;
    }
  }

  .file-buttons {
    font-size: 0;
  }

  .select2 {
    float: right;
  }

  .encoding-selector,
  .soft-wrap-toggle,
  .license-selector,
  .gitignore-selector,
  .gitlab-ci-yml-selector,
  .dockerfile-selector,
  .template-type-selector {
    display: inline-block;
    vertical-align: top;
    font-family: $regular_font;
  }

  .soft-wrap-toggle {
    margin: 0 $btn-side-margin;

    .soft-wrap {
      display: block;
    }

    .no-wrap {
      display: none;
    }

    &.soft-wrap-active {
      .soft-wrap {
        display: none;
      }

      .no-wrap {
        display: block;
      }
    }
  }

  .gitignore-selector,
  .license-selector,
  .gitlab-ci-yml-selector,
  .dockerfile-selector {
    .dropdown {
      line-height: 21px;
    }

    .dropdown-menu-toggle {
      vertical-align: top;
      width: 220px;
    }
  }

  .gitlab-ci-yml-selector {
    .dropdown-menu-toggle {
      width: 250px;
    }
  }
}


@media(max-width: $screen-xs-max){
  .file-editor {
    .file-title {
      .pull-right {
        height: auto;
      }
    }

    .new-file-name {
      max-width: none;
      width: 100%;
      margin-bottom: 3px;
    }

    .file-buttons {
      display: block;
      width: 100%;
      margin-bottom: 10px;

      .soft-wrap-toggle {
        width: 100%;
        margin: 3px 0;
      }

      .encoding-selector,
      .license-selector,
      .gitignore-selector,
      .gitlab-ci-yml-selector {
        display: block;
        margin: 3px 0;

        button {
          width: 100%;
        }
      }
    }
  }
}

.template-selectors-wrap {
  display: inline-block;
  padding-top: 5px;
  margin-left: 10px;
  border-left: 1px solid $gray-light;
  &>div {
    display: inline-block;
    font-family: $regular_font;
    margin-right: 15px;
  }
}

.apply-template-preview {
  background: $orange-transparent;
  padding: 15px 10px;
  margin: 10px 0;
  color: $orange-normal;
  border: 1px solid $orange-normal;
  border-radius: 2px;
  .apply-template-warning-message {
    margin-right: 15px;
  }
}

.page-title.near-template-selectors {
  display: inline-block;
  border-right: 1px solid $border-color;
  padding-right: 15px;
}

.templates-title {
  display: inline-block;
  margin-left: 10px;
}

.ace_content.preview-mode {
  // background-color: $gray-dark;
}

